GiRaFFE_NRPy_Main_Driver: Make sure that the code in the repo is up-to-date and portable.

--- a/in_progress/Tutorial-GiRaFFE_NRPy_Main_Driver.ipynb
+++ b/in_progress/Tutorial-GiRaFFE_NRPy_Main_Driver.ipynb
@@ -423,9 +423,6 @@
     "Valenciav_lU = ixp.register_gridfunctions_for_single_rank1(\"AUXEVOL\",\"Valenciav_lU\",DIM=3)\n",
     "B_lU = ixp.register_gridfunctions_for_single_rank1(\"AUXEVOL\",\"B_lU\",DIM=3)\n",
     "\n",
-    "Af.calculate_E_i_flux(True,alpha_face,gamma_faceDD,beta_faceU,\\\n",
-    "                      Valenciav_rU,B_rU,Valenciav_lU,B_lU)\n",
-    "\n",
     "Memory_Read = \"\"\"const double alpha_face = auxevol_gfs[IDX4S(ALPHA_FACEGF, i0,i1,i2)];\n",
     "const double gamma_faceDD00 = auxevol_gfs[IDX4S(GAMMA_FACEDD00GF, i0,i1,i2)];\n",
     "const double gamma_faceDD01 = auxevol_gfs[IDX4S(GAMMA_FACEDD01GF, i0,i1,i2)];\n",
@@ -460,13 +457,16 @@
     "\n",
     "subdir = \"RHSs\"\n",
     "for flux_dirn in range(3):\n",
+    "    Af.calculate_E_i_flux(flux_dirn,True,alpha_face,gamma_faceDD,beta_faceU,\\\n",
+    "                          Valenciav_rU,B_rU,Valenciav_lU,B_lU)\n",
+    "\n",
     "    E_field_to_print = [\\\n",
-    "                        sp.Rational(1,4)*Af.E_fluxD[(flux_dirn+1)%3],\\\n",
-    "                        sp.Rational(1,4)*Af.E_fluxD[(flux_dirn+2)%3],\\\n",
+    "                        sp.Rational(1,4)*Af.E_fluxD[(flux_dirn+1)%3],\n",
+    "                        sp.Rational(1,4)*Af.E_fluxD[(flux_dirn+2)%3],\n",
     "                       ]\n",
     "    E_field_names = [\\\n",
-    "                     \"A_rhsD\"+str((flux_dirn+1)%3),\\\n",
-    "                     \"A_rhsD\"+str((flux_dirn+2)%3),\\\n",
+    "                     \"A_rhsD\"+str((flux_dirn+1)%3),\n",
+    "                     \"A_rhsD\"+str((flux_dirn+2)%3),\n",
     "                    ]\n",
     "\n",
     "    desc = \"Calculate the electric flux on the left face in direction \" + str(flux_dirn) + \".\"\n",
@@ -807,10 +807,30 @@
     "#include \"C2P/GiRaFFE_NRPy_cons_to_prims.h\"\n",
     "#include \"C2P/GiRaFFE_NRPy_prims_to_cons.h\"\n",
     "\n",
+    "void override_BU_with_old_GiRaFFE(const paramstruct *restrict params,REAL *restrict auxevol_gfs,const int n) {\n",
+    "#include \"set_Cparameters.h\"\n",
+    "    char filename[100];\n",
+    "    sprintf(filename,\"BU0_override-%08d.bin\",n);\n",
+    "    FILE *out2D = fopen(filename, \"rb\");\n",
+    "    fread(auxevol_gfs+BU0GF*Nxx_plus_2NGHOSTS0*Nxx_plus_2NGHOSTS1*Nxx_plus_2NGHOSTS2,\n",
+    "          sizeof(double),Nxx_plus_2NGHOSTS0*Nxx_plus_2NGHOSTS1*Nxx_plus_2NGHOSTS2,out2D);\n",
+    "    fclose(out2D);\n",
+    "    sprintf(filename,\"BU1_override-%08d.bin\",n);\n",
+    "    out2D = fopen(filename, \"rb\");\n",
+    "    fread(auxevol_gfs+BU1GF*Nxx_plus_2NGHOSTS0*Nxx_plus_2NGHOSTS1*Nxx_plus_2NGHOSTS2,\n",
+    "          sizeof(double),Nxx_plus_2NGHOSTS0*Nxx_plus_2NGHOSTS1*Nxx_plus_2NGHOSTS2,out2D);\n",
+    "    fclose(out2D);\n",
+    "    sprintf(filename,\"BU2_override-%08d.bin\",n);\n",
+    "    out2D = fopen(filename, \"rb\");\n",
+    "    fread(auxevol_gfs+BU2GF*Nxx_plus_2NGHOSTS0*Nxx_plus_2NGHOSTS1*Nxx_plus_2NGHOSTS2,\n",
+    "          sizeof(double),Nxx_plus_2NGHOSTS0*Nxx_plus_2NGHOSTS1*Nxx_plus_2NGHOSTS2,out2D);\n",
+    "    fclose(out2D);\n",
+    "}\n",
+    "\n",
     "void GiRaFFE_NRPy_RHSs(const paramstruct *restrict params,REAL *restrict auxevol_gfs,const REAL *restrict in_gfs,REAL *restrict rhs_gfs) {\n",
     "#include \"set_Cparameters.h\"\n",
     "    // First thing's first: initialize the RHSs to zero!\n",
-    "    #pragma omp parallel for\n",
+    "#pragma omp parallel for\n",
     "    for(int ii=0;ii<Nxx_plus_2NGHOSTS0*Nxx_plus_2NGHOSTS1*Nxx_plus_2NGHOSTS2*NUM_EVOL_GFS;ii++) {\n",
     "        rhs_gfs[ii] = 0.0;\n",
     "    }\n",
@@ -910,15 +930,16 @@
     "    }\n",
     "}\n",
     "\n",
-    "void GiRaFFE_NRPy_post_step(const paramstruct *restrict params,REAL *xx[3],REAL *restrict auxevol_gfs,REAL *restrict evol_gfs) {\n",
+    "void GiRaFFE_NRPy_post_step(const paramstruct *restrict params,REAL *xx[3],REAL *restrict auxevol_gfs,REAL *restrict evol_gfs,const int n) {\n",
     "    // First, apply BCs to AD and psi6Phi. Then calculate BU from AD\n",
     "    apply_bcs_potential(params,evol_gfs);\n",
     "    driver_A_to_B(params,evol_gfs,auxevol_gfs);\n",
+    "    //override_BU_with_old_GiRaFFE(params,auxevol_gfs,n);\n",
     "    // Apply fixes to StildeD, then recompute the velocity at the new timestep. \n",
     "    // Apply the current sheet prescription to the velocities\n",
     "    GiRaFFE_NRPy_cons_to_prims(params,xx,auxevol_gfs,evol_gfs);\n",
     "    // Then, recompute StildeD to be consistent with the new velocities\n",
-    "    GiRaFFE_NRPy_prims_to_cons(params,auxevol_gfs,evol_gfs);\n",
+    "    //GiRaFFE_NRPy_prims_to_cons(params,auxevol_gfs,evol_gfs);\n",
     "    // Finally, apply outflow boundary conditions to the velocities.\n",
     "    apply_bcs_velocity(params,auxevol_gfs);\n",
     "}"
@@ -936,7 +957,7 @@
     "To validate the code in this tutorial we check for agreement between the files\n",
     "\n",
     "1. that were generated in this tutorial and\n",
-    "1. those that are generated in the module `GiRaFFE_NRPy_Main_Drive.py`\n"
+    "1. those that are generated in the module `GiRaFFE_NRPy_Main_Driver.py`\n"
    ]
   },
   {
@@ -1058,30 +1079,30 @@
     "\n",
     "print(\"Printing difference between original C code and this code...\")\n",
     "# Open the files to compare\n",
-    "files = [\"GiRaFFE_NRPy_Main_Driver.h\",\\\n",
-    "         \"RHSs/calculate_parentheticals_for_RHSs.h\",\\\n",
-    "         \"RHSs/calculate_AD_gauge_psi6Phi_RHSs.h\",\\\n",
-    "         \"PPM/reconstruct_set_of_prims_PPM_GRFFE_NRPy.c\",\\\n",
-    "         \"PPM/loop_defines_reconstruction_NRPy.h\",\\\n",
-    "         \"FCVAL/interpolate_metric_gfs_to_cell_faces.h\",\\\n",
-    "         \"RHSs/calculate_StildeD0_source_term.h\",\\\n",
-    "         \"RHSs/calculate_StildeD1_source_term.h\",\\\n",
-    "         \"RHSs/calculate_StildeD2_source_term.h\",\\\n",
-    "         \"RHSs/calculate_E_field_D0_right.h\",\\\n",
-    "         \"RHSs/calculate_E_field_D0_left.h\",\\\n",
-    "         \"RHSs/calculate_E_field_D1_right.h\",\\\n",
-    "         \"RHSs/calculate_E_field_D1_left.h\",\\\n",
-    "         \"RHSs/calculate_E_field_D2_right.h\",\\\n",
-    "         \"RHSs/calculate_E_field_D2_left.h\",\\\n",
-    "         \"RHSs/calculate_Stilde_flux_D0_right.h\",\\\n",
-    "         \"RHSs/calculate_Stilde_flux_D0_left.h\",\\\n",
-    "         \"RHSs/calculate_Stilde_flux_D1_right.h\",\\\n",
-    "         \"RHSs/calculate_Stilde_flux_D1_left.h\",\\\n",
-    "         \"RHSs/calculate_Stilde_flux_D2_right.h\",\\\n",
-    "         \"RHSs/calculate_Stilde_flux_D2_left.h\",\\\n",
-    "         \"boundary_conditions/GiRaFFE_boundary_conditions.h\",\\\n",
-    "         \"A2B/driver_AtoB.h\",\\\n",
-    "         \"C2P/GiRaFFE_NRPy_cons_to_prims.h\",\\\n",
+    "files = [\"GiRaFFE_NRPy_Main_Driver.h\",\n",
+    "         \"RHSs/calculate_parentheticals_for_RHSs.h\",\n",
+    "         \"RHSs/calculate_AD_gauge_psi6Phi_RHSs.h\",\n",
+    "         \"PPM/reconstruct_set_of_prims_PPM_GRFFE_NRPy.c\",\n",
+    "         \"PPM/loop_defines_reconstruction_NRPy.h\",\n",
+    "         \"FCVAL/interpolate_metric_gfs_to_cell_faces.h\",\n",
+    "         \"RHSs/calculate_StildeD0_source_term.h\",\n",
+    "         \"RHSs/calculate_StildeD1_source_term.h\",\n",
+    "         \"RHSs/calculate_StildeD2_source_term.h\",\n",
+    "         \"RHSs/calculate_E_field_D0_right.h\",\n",
+    "         \"RHSs/calculate_E_field_D0_left.h\",\n",
+    "         \"RHSs/calculate_E_field_D1_right.h\",\n",
+    "         \"RHSs/calculate_E_field_D1_left.h\",\n",
+    "         \"RHSs/calculate_E_field_D2_right.h\",\n",
+    "         \"RHSs/calculate_E_field_D2_left.h\",\n",
+    "         \"RHSs/calculate_Stilde_flux_D0_right.h\",\n",
+    "         \"RHSs/calculate_Stilde_flux_D0_left.h\",\n",
+    "         \"RHSs/calculate_Stilde_flux_D1_right.h\",\n",
+    "         \"RHSs/calculate_Stilde_flux_D1_left.h\",\n",
+    "         \"RHSs/calculate_Stilde_flux_D2_right.h\",\n",
+    "         \"RHSs/calculate_Stilde_flux_D2_left.h\",\n",
+    "         \"boundary_conditions/GiRaFFE_boundary_conditions.h\",\n",
+    "         \"A2B/driver_AtoB.h\",\n",
+    "         \"C2P/GiRaFFE_NRPy_cons_to_prims.h\",\n",
     "         \"C2P/GiRaFFE_NRPy_prims_to_cons.h\"]\n",
     "\n",
     "for file in files:\n",
