BSSN/Psi4Cartesianvalidation/Tutorial-Psi4-Cartesian_validation.ipynb: Update validation test to latest NRPy+

--- a/BSSN/Psi4Cartesianvalidation/Tutorial-Psi4-Cartesian_validation.ipynb
+++ b/BSSN/Psi4Cartesianvalidation/Tutorial-Psi4-Cartesian_validation.ipynb
@@ -83,6 +83,10 @@
    "outputs": [],
    "source": [
     "# Step 1.a: import all needed modules from NRPy+:\n",
+    "import shutil, os\n",
+    "import sys#TylerK: Add sys to get cmdline_helper from NRPy top directory; remove this line and next when debugged\n",
+    "sys.path.append('../../')\n",
+    "\n",
     "import sympy as sp\n",
     "from outputC import *\n",
     "import NRPy_param_funcs as par\n",
@@ -458,21 +462,7 @@
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "initialize_param() minor warning: Did nothing; already initialized parameter reference_metric::M_PI\n",
-      "initialize_param() minor warning: Did nothing; already initialized parameter reference_metric::xmin\n",
-      "initialize_param() minor warning: Did nothing; already initialized parameter reference_metric::xmax\n",
-      "initialize_param() minor warning: Did nothing; already initialized parameter reference_metric::ymin\n",
-      "initialize_param() minor warning: Did nothing; already initialized parameter reference_metric::ymax\n",
-      "initialize_param() minor warning: Did nothing; already initialized parameter reference_metric::zmin\n",
-      "initialize_param() minor warning: Did nothing; already initialized parameter reference_metric::zmax\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# mre4U = ixp.declarerank1(\"mre4U\",DIM=4)\n",
     "# mim4U = ixp.declarerank1(\"mim4U\",DIM=4)\n",
@@ -603,7 +593,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "GOOD: 9.858968807130199e-16 : 1.678026634904849e-08 1.678026634904847e-08\r\n"
+      "GOOD: 4.212367439480772e-16 : 1.178217177542785e-08 1.178217177542786e-08\r\n"
      ]
     }
    ],
@@ -631,8 +621,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[NbConvertApp] Converting notebook Tutorial-Psi4.ipynb to latex\n",
-      "[NbConvertApp] Writing 61056 bytes to Tutorial-Psi4.tex\n",
       "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
       " restricted \\write18 enabled.\n",
       "entering extended mode\n",
@@ -646,31 +634,31 @@
     }
    ],
    "source": [
-    "!jupyter nbconvert --to latex --template latex_nrpy_style.tplx --log-level='WARN' Tutorial-Psi4.ipynb\n",
-    "!pdflatex -interaction=batchmode Tutorial-Psi4.tex\n",
-    "!pdflatex -interaction=batchmode Tutorial-Psi4.tex\n",
-    "!pdflatex -interaction=batchmode Tutorial-Psi4.tex\n",
+    "!jupyter nbconvert --to latex --template ../../latex_nrpy_style.tplx --log-level='WARN' Tutorial-Psi4-Cartesian_validation.ipynb\n",
+    "!pdflatex -interaction=batchmode Tutorial-Psi4-Cartesian_validation.tex\n",
+    "!pdflatex -interaction=batchmode Tutorial-Psi4-Cartesian_validation.tex\n",
+    "!pdflatex -interaction=batchmode Tutorial-Psi4-Cartesian_validation.tex\n",
     "!rm -f Tut*.out Tut*.aux Tut*.log"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.13"
+   "pygments_lexer": "ipython3",
+   "version": "3.8.2"
   }
  },
  "nbformat": 4,
