GiRaFFE_NRPy_A2B: Some fine-tuning and bug fixing of the new A2B algorithm.

--- a/in_progress/Tutorial-GiRaFFE_NRPy-A2B.ipynb
+++ b/in_progress/Tutorial-GiRaFFE_NRPy-A2B.ipynb
@@ -344,13 +344,13 @@
     "    Bx[BACKWARD] = dy_Az - dz_Ay;\n",
     "}\n",
     "\n",
-    "#define TOLERANCE_A2B 1.0e-3\n",
+    "#define TOLERANCE_A2B 1.0e-4\n",
     "REAL find_accepted_Bx_order(REAL *Bx) {\n",
     "    REAL accepted_val = Bx[FOURTH];\n",
     "    REAL Rel_error_o1F_vs_o2 = relative_error(Bx[FORWARD], Bx[SECOND]);\n",
     "    REAL Rel_error_o1B_vs_o2 = relative_error(Bx[BACKWARD],Bx[SECOND]);\n",
     "    REAL Rel_error_o1_vs_o2 = 0.5*(Rel_error_o1F_vs_o2 + Rel_error_o1B_vs_o2 );\n",
-    "    if(Rel_error_o1_vs_o2 < relative_error(Bx[SECOND],Bx[FOURTH])) {\n",
+    "    if(relative_error(Bx[SECOND],Bx[FOURTH]) > 100*TOLERANCE_A2B) {\n",
     "        accepted_val = Bx[SECOND];\n",
     "        if(Rel_error_o1_vs_o2 > TOLERANCE_A2B) {\n",
     "            if(Rel_error_o1_vs_o2 > Rel_error_o1B_vs_o2) {\n",
