Tutorial-ETK_thorn-Weyl_Scalars_and_Spacetime_Invariants.ipynb: enable all psis output by default; remove psi4 only option

--- a/Tutorial-ETK_thorn-Weyl_Scalars_and_Spacetime_Invariants.ipynb
+++ b/Tutorial-ETK_thorn-Weyl_Scalars_and_Spacetime_Invariants.ipynb
@@ -387,10 +387,9 @@
     "private:\n",
     "CCTK_KEYWORD output_scalars \"Whether to output all Weyl scalars, just psi4, or all scalars and invariants\" \n",
     "{  \n",
-    "  \"psi4_only\" :: \"\"\n",
     "  \"all_psis\" :: \"\"\n",
     "  \"all_psis_and_invariants\" :: \"\"\n",
-    "} \"psi4_only\"\n"
+    "} \"all_psis\"\n"
    ]
   },
   {
