--- a/Tutorial-ScalarWave.ipynb
+++ b/Tutorial-ScalarWave.ipynb
@@ -138,11 +138,11 @@
    "outputs": [],
    "source": [
     "# Step P1: Import needed NRPy+ core modules:\n",
-    "import NRPy_param_funcs as par\n",
-    "import indexedexp as ixp\n",
-    "import grid as gri\n",
-    "import finite_difference as fin\n",
-    "from outputC import *"
+    "import NRPy_param_funcs as par   # NRPy+: Parameter interface\n",
+    "import indexedexp as ixp         # NRPy+: Symbolic indexed expression (e.g., tensors, vectors, etc.) support\n",
+    "import grid as gri               # NRPy+: Functions having to do with numerical grids\n",
+    "import finite_difference as fin  # NRPy+: Finite difference C code generation module\n",
+    "from outputC import *            # NRPy+: Core C code output module"
    ]
   },
   {
@@ -192,7 +192,10 @@
       "   const double uu_i0p1 = in_gfs[IDX2(UUGF, i0+1)];\n",
       "   const double uu_i0p2 = in_gfs[IDX2(UUGF, i0+2)];\n",
       "   const double vv = in_gfs[IDX2(VVGF, i0)];\n",
-      "   const double uu_dDD00 = ((invdx0)*(invdx0))*(-5.0/2.0*uu + (4.0/3.0)*uu_i0m1 - 1.0/12.0*uu_i0m2 + (4.0/3.0)*uu_i0p1 - 1.0/12.0*uu_i0p2);\n",
+      "   const double FDPart1_Rational_5_2 = 5.0/2.0;\n",
+      "   const double FDPart1_Rational_1_12 = 1.0/12.0;\n",
+      "   const double FDPart1_Rational_4_3 = 4.0/3.0;\n",
+      "   const double uu_dDD00 = ((invdx0)*(invdx0))*(FDPart1_Rational_1_12*(-uu_i0m2 - uu_i0p2) + FDPart1_Rational_4_3*(uu_i0m1 + uu_i0p1) - FDPart1_Rational_5_2*uu);\n",
       "   /* \n",
       "    * NRPy+ Finite Difference Code Generation, Step 2 of 2: Evaluate SymPy expressions and write to main memory:\n",
       "    */\n",
@@ -329,28 +332,31 @@
       "   const REAL_SIMD_ARRAY uu_i0_i1_i2p4 = ReadSIMD(&in_gfs[IDX4(UUGF, i0,i1,i2+4)]);\n",
       "   const REAL_SIMD_ARRAY uu_i0_i1_i2p5 = ReadSIMD(&in_gfs[IDX4(UUGF, i0,i1,i2+5)]);\n",
       "   const REAL_SIMD_ARRAY vv = ReadSIMD(&in_gfs[IDX4(VVGF, i0,i1,i2)]);\n",
-      "   const double tmpFD_Rational_1_3150_FDcoeff = 0.0003174603174603174603174603174603175;\n",
-      "   const REAL_SIMD_ARRAY _Rational_1_3150_FDcoeff = ConstSIMD(tmpFD_Rational_1_3150_FDcoeff);\n",
+      "   const double tmpFDPart1_NegativeOne_ = -1.0;\n",
+      "   const REAL_SIMD_ARRAY FDPart1_NegativeOne_ = ConstSIMD(tmpFDPart1_NegativeOne_);\n",
       "   \n",
-      "   const double tmpFD_Rational_5_126_FDcoeff = 0.03968253968253968253968253968253968;\n",
-      "   const REAL_SIMD_ARRAY _Rational_5_126_FDcoeff = ConstSIMD(tmpFD_Rational_5_126_FDcoeff);\n",
+      "   const double tmpFDPart1_Rational_1_3150 = 1.0/3150.0;\n",
+      "   const REAL_SIMD_ARRAY FDPart1_Rational_1_3150 = ConstSIMD(tmpFDPart1_Rational_1_3150);\n",
       "   \n",
-      "   const double tmpFD_Rational_5_3_FDcoeff = 1.666666666666666666666666666666667;\n",
-      "   const REAL_SIMD_ARRAY _Rational_5_3_FDcoeff = ConstSIMD(tmpFD_Rational_5_3_FDcoeff);\n",
+      "   const double tmpFDPart1_Rational_5269_1800 = 5269.0/1800.0;\n",
+      "   const REAL_SIMD_ARRAY FDPart1_Rational_5269_1800 = ConstSIMD(tmpFDPart1_Rational_5269_1800);\n",
       "   \n",
-      "   const double tmpFD_Rational_m5269_1800_FDcoeff = -2.927222222222222222222222222222222;\n",
-      "   const REAL_SIMD_ARRAY _Rational_m5269_1800_FDcoeff = ConstSIMD(tmpFD_Rational_m5269_1800_FDcoeff);\n",
+      "   const double tmpFDPart1_Rational_5_1008 = 5.0/1008.0;\n",
+      "   const REAL_SIMD_ARRAY FDPart1_Rational_5_1008 = ConstSIMD(tmpFDPart1_Rational_5_1008);\n",
       "   \n",
-      "   const double tmpFD_Rational_m5_1008_FDcoeff = -0.004960317460317460317460317460317460;\n",
-      "   const REAL_SIMD_ARRAY _Rational_m5_1008_FDcoeff = ConstSIMD(tmpFD_Rational_m5_1008_FDcoeff);\n",
+      "   const double tmpFDPart1_Rational_5_126 = 5.0/126.0;\n",
+      "   const REAL_SIMD_ARRAY FDPart1_Rational_5_126 = ConstSIMD(tmpFDPart1_Rational_5_126);\n",
       "   \n",
-      "   const double tmpFD_Rational_m5_21_FDcoeff = -0.2380952380952380952380952380952381;\n",
-      "   const REAL_SIMD_ARRAY _Rational_m5_21_FDcoeff = ConstSIMD(tmpFD_Rational_m5_21_FDcoeff);\n",
+      "   const double tmpFDPart1_Rational_5_21 = 5.0/21.0;\n",
+      "   const REAL_SIMD_ARRAY FDPart1_Rational_5_21 = ConstSIMD(tmpFDPart1_Rational_5_21);\n",
       "   \n",
-      "   const REAL_SIMD_ARRAY tmpFD0 = MulSIMD(uu, _Rational_m5269_1800_FDcoeff);\n",
-      "   const REAL_SIMD_ARRAY uu_dDD00 = MulSIMD(FusedMulAddSIMD(uu_i0p4_i1_i2, _Rational_m5_1008_FDcoeff, FusedMulAddSIMD(uu_i0p3_i1_i2, _Rational_5_126_FDcoeff, FusedMulAddSIMD(uu_i0p2_i1_i2, _Rational_m5_21_FDcoeff, FusedMulAddSIMD(uu_i0p1_i1_i2, _Rational_5_3_FDcoeff, FusedMulAddSIMD(uu_i0m5_i1_i2, _Rational_1_3150_FDcoeff, FusedMulAddSIMD(uu_i0m4_i1_i2, _Rational_m5_1008_FDcoeff, FusedMulAddSIMD(uu_i0m3_i1_i2, _Rational_5_126_FDcoeff, FusedMulAddSIMD(uu_i0m2_i1_i2, _Rational_m5_21_FDcoeff, FusedMulAddSIMD(uu_i0m1_i1_i2, _Rational_5_3_FDcoeff, FusedMulAddSIMD(uu_i0p5_i1_i2, _Rational_1_3150_FDcoeff, tmpFD0)))))))))), MulSIMD(invdx0, invdx0));\n",
-      "   const REAL_SIMD_ARRAY uu_dDD11 = MulSIMD(FusedMulAddSIMD(uu_i0_i1p4_i2, _Rational_m5_1008_FDcoeff, FusedMulAddSIMD(uu_i0_i1p3_i2, _Rational_5_126_FDcoeff, FusedMulAddSIMD(uu_i0_i1p2_i2, _Rational_m5_21_FDcoeff, FusedMulAddSIMD(uu_i0_i1p1_i2, _Rational_5_3_FDcoeff, FusedMulAddSIMD(uu_i0_i1m5_i2, _Rational_1_3150_FDcoeff, FusedMulAddSIMD(uu_i0_i1m4_i2, _Rational_m5_1008_FDcoeff, FusedMulAddSIMD(uu_i0_i1m3_i2, _Rational_5_126_FDcoeff, FusedMulAddSIMD(uu_i0_i1m2_i2, _Rational_m5_21_FDcoeff, FusedMulAddSIMD(uu_i0_i1m1_i2, _Rational_5_3_FDcoeff, FusedMulAddSIMD(uu_i0_i1p5_i2, _Rational_1_3150_FDcoeff, tmpFD0)))))))))), MulSIMD(invdx1, invdx1));\n",
-      "   const REAL_SIMD_ARRAY uu_dDD22 = MulSIMD(FusedMulAddSIMD(uu_i0_i1_i2p4, _Rational_m5_1008_FDcoeff, FusedMulAddSIMD(uu_i0_i1_i2p3, _Rational_5_126_FDcoeff, FusedMulAddSIMD(uu_i0_i1_i2p2, _Rational_m5_21_FDcoeff, FusedMulAddSIMD(uu_i0_i1_i2p1, _Rational_5_3_FDcoeff, FusedMulAddSIMD(uu_i0_i1_i2m5, _Rational_1_3150_FDcoeff, FusedMulAddSIMD(uu_i0_i1_i2m4, _Rational_m5_1008_FDcoeff, FusedMulAddSIMD(uu_i0_i1_i2m3, _Rational_5_126_FDcoeff, FusedMulAddSIMD(uu_i0_i1_i2m2, _Rational_m5_21_FDcoeff, FusedMulAddSIMD(uu_i0_i1_i2m1, _Rational_5_3_FDcoeff, FusedMulAddSIMD(uu_i0_i1_i2p5, _Rational_1_3150_FDcoeff, tmpFD0)))))))))), MulSIMD(invdx2, invdx2));\n",
+      "   const double tmpFDPart1_Rational_5_3 = 5.0/3.0;\n",
+      "   const REAL_SIMD_ARRAY FDPart1_Rational_5_3 = ConstSIMD(tmpFDPart1_Rational_5_3);\n",
+      "   \n",
+      "   const REAL_SIMD_ARRAY FDPart1_0 = MulSIMD(FDPart1_NegativeOne_, MulSIMD(FDPart1_Rational_5269_1800, uu));\n",
+      "   const REAL_SIMD_ARRAY uu_dDD00 = MulSIMD(MulSIMD(invdx0, invdx0), FusedMulAddSIMD(FDPart1_Rational_5_126, AddSIMD(uu_i0m3_i1_i2, uu_i0p3_i1_i2), FusedMulAddSIMD(FDPart1_Rational_5_1008, FusedMulSubSIMD(FDPart1_NegativeOne_, uu_i0p4_i1_i2, uu_i0m4_i1_i2), FusedMulAddSIMD(FDPart1_Rational_1_3150, AddSIMD(uu_i0m5_i1_i2, uu_i0p5_i1_i2), FusedMulAddSIMD(FDPart1_Rational_5_21, FusedMulSubSIMD(FDPart1_NegativeOne_, uu_i0p2_i1_i2, uu_i0m2_i1_i2), FusedMulAddSIMD(FDPart1_Rational_5_3, AddSIMD(uu_i0m1_i1_i2, uu_i0p1_i1_i2), FDPart1_0))))));\n",
+      "   const REAL_SIMD_ARRAY uu_dDD11 = MulSIMD(MulSIMD(invdx1, invdx1), FusedMulAddSIMD(FDPart1_Rational_5_126, AddSIMD(uu_i0_i1m3_i2, uu_i0_i1p3_i2), FusedMulAddSIMD(FDPart1_Rational_5_1008, FusedMulSubSIMD(FDPart1_NegativeOne_, uu_i0_i1p4_i2, uu_i0_i1m4_i2), FusedMulAddSIMD(FDPart1_Rational_1_3150, AddSIMD(uu_i0_i1m5_i2, uu_i0_i1p5_i2), FusedMulAddSIMD(FDPart1_Rational_5_21, FusedMulSubSIMD(FDPart1_NegativeOne_, uu_i0_i1p2_i2, uu_i0_i1m2_i2), FusedMulAddSIMD(FDPart1_Rational_5_3, AddSIMD(uu_i0_i1m1_i2, uu_i0_i1p1_i2), FDPart1_0))))));\n",
+      "   const REAL_SIMD_ARRAY uu_dDD22 = MulSIMD(MulSIMD(invdx2, invdx2), FusedMulAddSIMD(FDPart1_Rational_5_126, AddSIMD(uu_i0_i1_i2m3, uu_i0_i1_i2p3), FusedMulAddSIMD(FDPart1_Rational_5_1008, FusedMulSubSIMD(FDPart1_NegativeOne_, uu_i0_i1_i2p4, uu_i0_i1_i2m4), FusedMulAddSIMD(FDPart1_Rational_1_3150, AddSIMD(uu_i0_i1_i2m5, uu_i0_i1_i2p5), FusedMulAddSIMD(FDPart1_Rational_5_21, FusedMulSubSIMD(FDPart1_NegativeOne_, uu_i0_i1_i2p2, uu_i0_i1_i2m2), FusedMulAddSIMD(FDPart1_Rational_5_3, AddSIMD(uu_i0_i1_i2m1, uu_i0_i1_i2p1), FDPart1_0))))));\n",
       "   /* \n",
       "    * NRPy+ Finite Difference Code Generation, Step 2 of 2: Evaluate SymPy expressions and write to main memory:\n",
       "    */\n",
@@ -360,7 +366,7 @@
       "    *    const REAL_SIMD_ARRAY __RHS_exp_1 = wavespeed**2*(uu_dDD00 + uu_dDD11 + uu_dDD22)]\"\n",
       "    */\n",
       "   const REAL_SIMD_ARRAY __RHS_exp_0 = vv;\n",
-      "   const REAL_SIMD_ARRAY __RHS_exp_1 = MulSIMD(AddSIMD(uu_dDD11, AddSIMD(uu_dDD00, uu_dDD22)), MulSIMD(wavespeed, wavespeed));\n",
+      "   const REAL_SIMD_ARRAY __RHS_exp_1 = MulSIMD(MulSIMD(wavespeed, wavespeed), AddSIMD(uu_dDD00, AddSIMD(uu_dDD11, uu_dDD22)));\n",
       "   WriteSIMD(&rhs_gfs[IDX4(UUGF, i0, i1, i2)], __RHS_exp_0);\n",
       "   WriteSIMD(&rhs_gfs[IDX4(VVGF, i0, i1, i2)], __RHS_exp_1);\n",
       "}\n",
@@ -669,7 +675,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.0"
+   "version": "3.8.2"
   }
  },
  "nbformat": 4,
