Rerun all Jupyter notebooks with latest outputC updates

--- a/Tutorial-cmdline_helper.ipynb
+++ b/Tutorial-cmdline_helper.ipynb
@@ -66,15 +66,7 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Writing cmdline_helper-validation.py\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%%writefile cmdline_helper-validation.py\n",
     "# As documented in the NRPy+ tutorial notebook\n",
@@ -128,15 +120,7 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Appending to cmdline_helper-validation.py\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%%writefile -a cmdline_helper-validation.py\n",
     "\n",
@@ -207,6 +191,11 @@
     "        compile_string = \"gcc -O2 -g -fopenmp \"+str(main_C_output_path)+\" -o \"+str(main_C_output_file)+\" -lm\"\n",
     "        Execute_input_string(compile_string, os.devnull)\n",
     "        # Check if executable exists (i.e., compile was successful), if not, try with more conservative compile flags.\n",
+    "        if not os.path.isfile(main_C_output_file):\n",
+    "            # Step 3.A: Revert to more compatible gcc compile option\n",
+    "            print(\"Most safe failed. Removing -fopenmp:\")\n",
+    "            compile_string = \"gcc -O2 \"+str(main_C_output_path)+\" -o \"+str(main_C_output_file)+\" -lm\"\n",
+    "            Execute_input_string(compile_string, os.devnull)\n",
     "        if not os.path.isfile(main_C_output_file):\n",
     "            print(\"Sorry, compilation failed\")\n",
     "            sys.exit(1)\n",
@@ -545,7 +534,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.0"
+   "version": "3.8.2"
   }
  },
  "nbformat": 4,
