--- a/Tutorial-ETK_thorn-FishboneMoncriefID.ipynb
+++ b/Tutorial-ETK_thorn-FishboneMoncriefID.ipynb
@@ -194,7 +194,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Overwriting FishboneMoncriefID/src/InitialData.c\n"
+      "Writing FishboneMoncriefID/src/InitialData.c\n"
      ]
     }
    ],
@@ -361,7 +361,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Overwriting FishboneMoncriefID/interface.ccl\n"
+      "Writing FishboneMoncriefID/interface.ccl\n"
      ]
     }
    ],
@@ -387,7 +387,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Overwriting FishboneMoncriefID/param.ccl\n"
+      "Writing FishboneMoncriefID/param.ccl\n"
      ]
     }
    ],
@@ -505,7 +505,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Overwriting FishboneMoncriefID/schedule.ccl\n"
+      "Writing FishboneMoncriefID/schedule.ccl\n"
      ]
     }
    ],
@@ -568,7 +568,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Overwriting FishboneMoncriefID/src/make.code.defn\n"
+      "Writing FishboneMoncriefID/src/make.code.defn\n"
      ]
     }
    ],
@@ -636,7 +636,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.0"
+   "version": "3.8.2"
   }
  },
  "nbformat": 4,
