--- a/Tutorial-Finite_Difference_Derivatives.ipynb
+++ b/Tutorial-Finite_Difference_Derivatives.ipynb
@@ -232,7 +232,10 @@
       "   const double phi = aux_gfs[IDX2(PHIGF, i0)];\n",
       "   const double phi_i0p1 = aux_gfs[IDX2(PHIGF, i0+1)];\n",
       "   const double phi_i0p2 = aux_gfs[IDX2(PHIGF, i0+2)];\n",
-      "   const double phi_dDD00 = ((invdx0)*(invdx0))*(-5.0/2.0*phi + (4.0/3.0)*phi_i0m1 - 1.0/12.0*phi_i0m2 + (4.0/3.0)*phi_i0p1 - 1.0/12.0*phi_i0p2);\n",
+      "   const double FDPart1_Rational_5_2 = 5.0/2.0;\n",
+      "   const double FDPart1_Rational_1_12 = 1.0/12.0;\n",
+      "   const double FDPart1_Rational_4_3 = 4.0/3.0;\n",
+      "   const double phi_dDD00 = ((invdx0)*(invdx0))*(FDPart1_Rational_1_12*(-phi_i0m2 - phi_i0p2) + FDPart1_Rational_4_3*(phi_i0m1 + phi_i0p1) - FDPart1_Rational_5_2*phi);\n",
       "   /* \n",
       "    * NRPy+ Finite Difference Code Generation, Step 2 of 2: Evaluate SymPy expressions and write to main memory:\n",
       "    */\n",
@@ -341,7 +344,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.0"
+   "version": "3.8.2"
   }
  },
  "nbformat": 4,
