--- a/Tutorial-SEOBNR_Documentation.ipynb
+++ b/Tutorial-SEOBNR_Documentation.ipynb
@@ -234,7 +234,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Overwriting SEOBNR/Hamiltonian-Hreal_on_top.txt\n"
+      "Writing SEOBNR/Hamiltonian-Hreal_on_top.txt\n"
      ]
     }
    ],
@@ -4508,7 +4508,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.0"
+   "version": "3.8.2"
   }
  },
  "nbformat": 4,
