--- a/Tutorial-ScalarWaveCurvilinear.ipynb
+++ b/Tutorial-ScalarWaveCurvilinear.ipynb
@@ -335,16 +335,17 @@
       "   const double uu_i0_i1_i2p1 = in_gfs[IDX4(UUGF, i0,i1,i2+1)];\n",
       "   const double uu_i0_i1_i2p2 = in_gfs[IDX4(UUGF, i0,i1,i2+2)];\n",
       "   const double vv = in_gfs[IDX4(VVGF, i0,i1,i2)];\n",
-      "   const double tmpFD0 = (1.0/12.0)*uu_i0m2_i1_i2;\n",
-      "   const double tmpFD1 = -1.0/12.0*uu_i0p2_i1_i2;\n",
-      "   const double tmpFD2 = (1.0/12.0)*uu_i0_i1m2_i2;\n",
-      "   const double tmpFD3 = -1.0/12.0*uu_i0_i1p2_i2;\n",
-      "   const double tmpFD4 = -5.0/2.0*uu;\n",
-      "   const double uu_dD0 = invdx0*(tmpFD0 + tmpFD1 - 2.0/3.0*uu_i0m1_i1_i2 + (2.0/3.0)*uu_i0p1_i1_i2);\n",
-      "   const double uu_dD1 = invdx1*(tmpFD2 + tmpFD3 - 2.0/3.0*uu_i0_i1m1_i2 + (2.0/3.0)*uu_i0_i1p1_i2);\n",
-      "   const double uu_dDD00 = ((invdx0)*(invdx0))*(-tmpFD0 + tmpFD1 + tmpFD4 + (4.0/3.0)*uu_i0m1_i1_i2 + (4.0/3.0)*uu_i0p1_i1_i2);\n",
-      "   const double uu_dDD11 = ((invdx1)*(invdx1))*(-tmpFD2 + tmpFD3 + tmpFD4 + (4.0/3.0)*uu_i0_i1m1_i2 + (4.0/3.0)*uu_i0_i1p1_i2);\n",
-      "   const double uu_dDD22 = ((invdx2)*(invdx2))*(tmpFD4 + (4.0/3.0)*uu_i0_i1_i2m1 - 1.0/12.0*uu_i0_i1_i2m2 + (4.0/3.0)*uu_i0_i1_i2p1 - 1.0/12.0*uu_i0_i1_i2p2);\n",
+      "   const double FDPart1_Rational_2_3 = 2.0/3.0;\n",
+      "   const double FDPart1_Rational_1_12 = 1.0/12.0;\n",
+      "   const double FDPart1_Rational_5_2 = 5.0/2.0;\n",
+      "   const double FDPart1_Rational_4_3 = 4.0/3.0;\n",
+      "   const double FDPart1_1 = -uu_i0_i1p2_i2;\n",
+      "   const double FDPart1_2 = -FDPart1_Rational_5_2*uu;\n",
+      "   const double uu_dD0 = invdx0*(FDPart1_Rational_1_12*(uu_i0m2_i1_i2 - uu_i0p2_i1_i2) + FDPart1_Rational_2_3*(-uu_i0m1_i1_i2 + uu_i0p1_i1_i2));\n",
+      "   const double uu_dD1 = invdx1*(FDPart1_Rational_1_12*(FDPart1_1 + uu_i0_i1m2_i2) + FDPart1_Rational_2_3*(-uu_i0_i1m1_i2 + uu_i0_i1p1_i2));\n",
+      "   const double uu_dDD00 = ((invdx0)*(invdx0))*(FDPart1_2 + FDPart1_Rational_1_12*(-uu_i0m2_i1_i2 - uu_i0p2_i1_i2) + FDPart1_Rational_4_3*(uu_i0m1_i1_i2 + uu_i0p1_i1_i2));\n",
+      "   const double uu_dDD11 = ((invdx1)*(invdx1))*(FDPart1_2 + FDPart1_Rational_1_12*(FDPart1_1 - uu_i0_i1m2_i2) + FDPart1_Rational_4_3*(uu_i0_i1m1_i2 + uu_i0_i1p1_i2));\n",
+      "   const double uu_dDD22 = ((invdx2)*(invdx2))*(FDPart1_2 + FDPart1_Rational_1_12*(-uu_i0_i1_i2m2 - uu_i0_i1_i2p2) + FDPart1_Rational_4_3*(uu_i0_i1_i2m1 + uu_i0_i1_i2p1));\n",
       "   /* \n",
       "    * NRPy+ Finite Difference Code Generation, Step 2 of 2: Evaluate SymPy expressions and write to main memory:\n",
       "    */\n",
@@ -353,10 +354,10 @@
       "    *  \"[rhs_gfs[IDX4(UUGF, i0, i1, i2)] = vv,\n",
       "    *    rhs_gfs[IDX4(VVGF, i0, i1, i2)] = wavespeed**2*(2*uu_dD0/xx0 + uu_dD1*sin(2*xx1)/(2*xx0**2*sin(xx1)**2) + uu_dDD00 + uu_dDD11/xx0**2 + uu_dDD22/(xx0**2*sin(xx1)**2))]\"\n",
       "    */\n",
-      "   const double tmp0 = (1.0/((xx0)*(xx0)));\n",
-      "   const double tmp1 = tmp0/((sin(xx1))*(sin(xx1)));\n",
+      "   const double FDPart3_0 = (1.0/((xx0)*(xx0)));\n",
+      "   const double FDPart3_1 = FDPart3_0/((sin(xx1))*(sin(xx1)));\n",
       "   rhs_gfs[IDX4(UUGF, i0, i1, i2)] = vv;\n",
-      "   rhs_gfs[IDX4(VVGF, i0, i1, i2)] = ((wavespeed)*(wavespeed))*(tmp0*uu_dDD11 + (1.0/2.0)*tmp1*uu_dD1*sin(2*xx1) + tmp1*uu_dDD22 + 2*uu_dD0/xx0 + uu_dDD00);\n",
+      "   rhs_gfs[IDX4(VVGF, i0, i1, i2)] = ((wavespeed)*(wavespeed))*(FDPart3_0*uu_dDD11 + (1.0/2.0)*FDPart3_1*uu_dD1*sin(2*xx1) + FDPart3_1*uu_dDD22 + 2*uu_dD0/xx0 + uu_dDD00);\n",
       "}\n",
       "\n"
      ]
@@ -546,7 +547,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.0"
+   "version": "3.8.2"
   }
  },
  "nbformat": 4,
