GiRaFFE_NRPy/PPM: Added and corrected big picture details in introduction.

--- a/in_progress/Tutorial-GiRaFFE_NRPy-PPM.ipynb
+++ b/in_progress/Tutorial-GiRaFFE_NRPy-PPM.ipynb
@@ -24,7 +24,7 @@
     "# This module presents the functionality of [GiRaFFE_NRPy_PPM.py](../../edit/in_progress/GiRaFFE_NRPy/GiRaFFE_NRPy_PPM.py) .\n",
     "This notebook documents the function from the original `GiRaFFE` that implements the reconstruction algorithm used by the piecewise-parabolic method (PPM) of [Colella and Woodward (1984)](https://crd.lbl.gov/assets/pubs_presos/AMCS/ANAG/A141984.pdf).\n",
     "\n",
-    "The differential equations that `GiRaFFE` evolves have two different terms that contribute to the time evolution of some quantity: the flux term and the source term. The PPM method is what the original `GiRaFFE` uses to handle the flux term; hopefully, using this instead of finite-differencing will fix some of the problems we've been having with `GiRaFFE_NRPy`.\n",
+    "The differential equations that `GiRaFFE` evolves have two different terms that contribute to the time evolution of some quantity: the flux term and the source term. The flux terms will require us to use Riemann solvers to properly handle shocks in the data; such algorithms require data at cell interfaces the cell interfaces. For the cell centered around $i$, these are at positions $i \\pm 1/2$. This reconstruction algorithm will compute the value of input quantities to the left and right side of the interface at $i-1/2$. It thus follows that the data at the interface $i+1/2$ can be found by accessing $i+1$ in the code. The algorithm will also apply slope-limiting and monotization algorithms that will serve to preserve stability near shocks.\n",
     "\n",
     "This algorithm is not quite as accessible as the much simpler finite-difference methods; as such, [this notebook](https://mybinder.org/v2/gh/python-hydro/how_to_write_a_hydro_code/master) is recommended as an introduction. It covers a simpler reconstruction scheme, and proved useful in preparing the documentation for this more complicated scheme.\n",
     "\n",
@@ -861,7 +861,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.0"
+   "version": "3.8.1"
   }
  },
  "nbformat": 4,
