GiRaFFE_NRPy/Afield_flux,GiRaFFE_NRPy_Stilde_flux: Remove redundancy in cmax, cmin calculations to avoid fabs(0).

--- a/in_progress/Tutorial-GiRaFFE_NRPy-Afield_flux.ipynb
+++ b/in_progress/Tutorial-GiRaFFE_NRPy-Afield_flux.ipynb
@@ -243,7 +243,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We will now write a function in NRPy+ similar to the one used in the old `GiRaFFE`, allowing us to generate the expressions with less need to copy-and-paste code; the key difference is that this one will be in Python, and generate optimized C code integrated into the rest of the operations. Notice that since we eliminated the dependence on velocities, none of the input quantities are different on either side of the face. So, this function won't really do much besides guarantee that `cmax` and `cmin` are positive, but we'll leave the machinery here since it is likely to be a useful guide to somebody who wants to something similar. We use the same technique as above to replace the `if` statements inherent to the `MAX()` and `MIN()` functions."
+    "We will now write a function in NRPy+ similar to the one used in the old `GiRaFFE`, allowing us to generate the expressions with less need to copy-and-paste code; the key difference is that this one will be in Python, and generate optimized C code integrated into the rest of the operations. Notice that since we eliminated the dependence on velocities, none of the input quantities are different on either side of the face. So, this function won't really do much besides guarantee that `cmax` and `cmin` are positive, but we'll leave the machinery here since it is likely to be a useful guide to somebody who wants to something similar. The only modifications we'll make are those necessary to eliminate calls to `fabs(0)` in the C code. We use the same technique as above to replace the `if` statements inherent to the `MAX()` and `MIN()` functions. "
    ]
   },
   {
@@ -259,12 +259,16 @@
     "    # Outputs: maximum and minimum characteristic speeds cmax and cmin\n",
     "    # First, we need to find the characteristic speeds on each face\n",
     "    gamma_faceUU,unusedgammaDET = ixp.generic_matrix_inverter3x3(gamma_faceDD)\n",
+    "    # Original needed for GRMHD\n",
+    "#     find_cp_cm(alpha_face,beta_faceU[field_comp],gamma_faceUU[field_comp][field_comp])\n",
+    "#     cpr = cplus\n",
+    "#     cmr = cminus\n",
+    "#     find_cp_cm(alpha_face,beta_faceU[field_comp],gamma_faceUU[field_comp][field_comp])\n",
+    "#     cpl = cplus\n",
+    "#     cml = cminus\n",
     "    find_cp_cm(alpha_face,beta_faceU[field_comp],gamma_faceUU[field_comp][field_comp])\n",
-    "    cpr = cplus\n",
-    "    cmr = cminus\n",
-    "    find_cp_cm(alpha_face,beta_faceU[field_comp],gamma_faceUU[field_comp][field_comp])\n",
-    "    cpl = cplus\n",
-    "    cml = cminus\n",
+    "    cp = cplus\n",
+    "    cm = cminus\n",
     "    \n",
     "    # The following algorithms have been verified with random floats:\n",
     "    \n",
@@ -272,10 +276,10 @@
     "    # Now, we need to set cmax to the larger of cpr,cpl, and 0\n",
     "    \n",
     "    import Min_Max_and_Piecewise_Expressions as noif\n",
-    "    cmax = noif.max_noif(noif.max_noif(cpr,cpl),sp.sympify(0))\n",
+    "    cmax = noif.max_noif(cp,sp.sympify(0))\n",
     "    \n",
     "    # And then, set cmin to the smaller of cmr,cml, and 0\n",
-    "    cmin = -noif.min_noif(noif.min_noif(cmr,cml),sp.sympify(0))"
+    "    cmin = -noif.min_noif(cm,sp.sympify(0))"
    ]
   },
   {
@@ -636,11 +640,13 @@
     "import difflib\n",
     "import sys\n",
     "\n",
+    "subdir = os.path.join(\"RHSs\")\n",
+    "\n",
     "out_dir = os.path.join(\"GiRaFFE_standalone_Ccodes\")\n",
     "cmd.mkdir(out_dir)\n",
+    "cmd.mkdir(os.path.join(out_dir,subdir))\n",
     "valdir = os.path.join(\"GiRaFFE_Ccodes_validation\")\n",
     "cmd.mkdir(valdir)\n",
-    "subdir = os.path.join(\"RHSs\")\n",
     "cmd.mkdir(os.path.join(valdir,subdir))\n",
     "\n",
     "generate_Afield_flux_function_files(out_dir,subdir,alpha_face,gamma_faceDD,beta_faceU,\\\n",
