--- a/Tutorial-ADM_Initial_Data-StaticTrumpet.ipynb
+++ b/Tutorial-ADM_Initial_Data-StaticTrumpet.ipynb
@@ -354,30 +354,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
-      " restricted \\write18 enabled.\n",
-      "entering extended mode\n",
-      "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
-      " restricted \\write18 enabled.\n",
-      "entering extended mode\n",
-      "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
-      " restricted \\write18 enabled.\n",
-      "entering extended mode\n"
+      "Created Tutorial-ADM_Initial_Data-StaticTrumpet.tex, and compiled LaTeX file to PDF file Tutorial-ADM_Initial_Data-StaticTrumpet.pdf\n"
      ]
     }
    ],
    "source": [
-    "!jupyter nbconvert --to latex --template latex_nrpy_style.tplx --log-level='WARN' Tutorial-ADM_Initial_Data-StaticTrumpet.ipynb\n",
-    "!pdflatex -interaction=batchmode Tutorial-ADM_Initial_Data-StaticTrumpet.tex\n",
-    "!pdflatex -interaction=batchmode Tutorial-ADM_Initial_Data-StaticTrumpet.tex\n",
-    "!pdflatex -interaction=batchmode Tutorial-ADM_Initial_Data-StaticTrumpet.tex\n",
-    "!rm -f Tut*.out Tut*.aux Tut*.log"
+    "import cmdline_helper as cmd    # NRPy+: Multi-platform Python command-line interface\n",
+    "cmd.output_Jupyter_notebook_to_LaTeXed_PDF(\"Tutorial-ADM_Initial_Data-StaticTrumpet\")"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
