--- a/Tutorial-BaikalETK.ipynb
+++ b/Tutorial-BaikalETK.ipynb
@@ -2971,11 +2971,8 @@
     }
    ],
    "source": [
-    "!jupyter nbconvert --to latex --template latex_nrpy_style.tplx --log-level='WARN' Tutorial-BaikalETK.ipynb\n",
-    "!pdflatex -interaction=batchmode Tutorial-BaikalETK.tex\n",
-    "!pdflatex -interaction=batchmode Tutorial-BaikalETK.tex\n",
-    "!pdflatex -interaction=batchmode Tutorial-BaikalETK.tex\n",
-    "!rm -f Tut*.out Tut*.aux Tut*.log"
+    "import cmdline_helper as cmd    # NRPy+: Multi-platform Python command-line interface\n",
+    "cmd.output_Jupyter_notebook_to_LaTeXed_PDF(\"Tutorial-BaikalETK\")"
    ]
   }
  ],
