--- a/Tutorial-Coutput__Parameter_Interface.ipynb
+++ b/Tutorial-Coutput__Parameter_Interface.ipynb
@@ -584,11 +584,8 @@
     }
    ],
    "source": [
-    "!jupyter nbconvert --to latex --template latex_nrpy_style.tplx --log-level='WARN' Tutorial-Coutput__Parameter_Interface.ipynb\n",
-    "!pdflatex -interaction=batchmode Tutorial-Coutput__Parameter_Interface.tex\n",
-    "!pdflatex -interaction=batchmode Tutorial-Coutput__Parameter_Interface.tex\n",
-    "!pdflatex -interaction=batchmode Tutorial-Coutput__Parameter_Interface.tex\n",
-    "!rm -f Tut*.out Tut*.aux Tut*.log"
+    "import cmdline_helper as cmd    # NRPy+: Multi-platform Python command-line interface\n",
+    "cmd.output_Jupyter_notebook_to_LaTeXed_PDF(\"Tutorial-Coutput__Parameter_Interface\")"
    ]
   }
  ],
