--- a/Tutorial-ETK_thorn-IDMaxwellNRPy.ipynb
+++ b/Tutorial-ETK_thorn-IDMaxwellNRPy.ipynb
@@ -408,24 +408,13 @@
      "output_type": "stream",
      "text": [
       "[pandoc warning] Duplicate link reference `[comment]' \"source\" (line 17, column 1)\n",
-      "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
-      " restricted \\write18 enabled.\n",
-      "entering extended mode\n",
-      "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
-      " restricted \\write18 enabled.\n",
-      "entering extended mode\n",
-      "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
-      " restricted \\write18 enabled.\n",
-      "entering extended mode\n"
+      "Created Tutorial-ETK_thorn-IDMaxwellNRPy.tex, and compiled LaTeX file to PDF file Tutorial-ETK_thorn-IDMaxwellNRPy.pdf\n"
      ]
     }
    ],
    "source": [
-    "!jupyter nbconvert --to latex --template latex_nrpy_style.tplx --log-level='WARN' Tutorial-ETK_thorn-IDMaxwellNRPy.ipynb\n",
-    "!pdflatex -interaction=batchmode Tutorial-ETK_thorn-IDMaxwellNRPy.tex\n",
-    "!pdflatex -interaction=batchmode Tutorial-ETK_thorn-IDMaxwellNRPy.tex\n",
-    "!pdflatex -interaction=batchmode Tutorial-ETK_thorn-IDMaxwellNRPy.tex\n",
-    "!rm -f Tut*.out Tut*.aux Tut*.log"
+    "import cmdline_helper as cmd    # NRPy+: Multi-platform Python command-line interface\n",
+    "cmd.output_Jupyter_notebook_to_LaTeXed_PDF(\"Tutorial-ETK_thorn-IDMaxwellNRPy\")"
    ]
   }
  ],
