--- a/Tutorial-ETK_thorn-Interpolation_to_Arbitrary_Grids_multi_order.ipynb
+++ b/Tutorial-ETK_thorn-Interpolation_to_Arbitrary_Grids_multi_order.ipynb
@@ -2420,24 +2420,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
-      " restricted \\write18 enabled.\n",
-      "entering extended mode\n",
-      "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
-      " restricted \\write18 enabled.\n",
-      "entering extended mode\n",
-      "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
-      " restricted \\write18 enabled.\n",
-      "entering extended mode\n"
+      "Created Tutorial-ETK_thorn-Interpolation_to_Arbitrary_Grids_multi_order.tex, and compiled LaTeX file to PDF file Tutorial-ETK_thorn-Interpolation_to_Arbitrary_Grids_multi_order.pdf\n"
      ]
     }
    ],
    "source": [
-    "!jupyter nbconvert --to latex --template latex_nrpy_style.tplx --log-level='WARN' Tutorial-ETK_thorn-Interpolation_to_Arbitrary_Grids_multi_order.ipynb\n",
-    "!pdflatex -interaction=batchmode Tutorial-ETK_thorn-Interpolation_to_Arbitrary_Grids_multi_order.tex\n",
-    "!pdflatex -interaction=batchmode Tutorial-ETK_thorn-Interpolation_to_Arbitrary_Grids_multi_order.tex\n",
-    "!pdflatex -interaction=batchmode Tutorial-ETK_thorn-Interpolation_to_Arbitrary_Grids_multi_order.tex\n",
-    "!rm -f Tut*.out Tut*.aux Tut*.log"
+    "import cmdline_helper as cmd    # NRPy+: Multi-platform Python command-line interface\n",
+    "cmd.output_Jupyter_notebook_to_LaTeXed_PDF(\"Tutorial-ETK_thorn-Interpolation_to_Arbitrary_Grids_multi_order\")"
    ]
   }
  ],
