--- a/Tutorial-FishboneMoncriefID.ipynb
+++ b/Tutorial-FishboneMoncriefID.ipynb
@@ -1152,11 +1152,8 @@
     }
    ],
    "source": [
-    "!jupyter nbconvert --to latex --template latex_nrpy_style.tplx --log-level='WARN' Tutorial-FishboneMoncriefID.ipynb\n",
-    "!pdflatex -interaction=batchmode Tutorial-FishboneMoncriefID.tex\n",
-    "!pdflatex -interaction=batchmode Tutorial-FishboneMoncriefID.tex\n",
-    "!pdflatex -interaction=batchmode Tutorial-FishboneMoncriefID.tex\n",
-    "!rm -f Tut*.out Tut*.aux Tut*.log"
+    "import cmdline_helper as cmd    # NRPy+: Multi-platform Python command-line interface\n",
+    "cmd.output_Jupyter_notebook_to_LaTeXed_PDF(\"Tutorial-FishboneMoncriefID\")"
    ]
   }
  ],
