--- a/Tutorial-GRHD_Equations-Cartesian-c-code.ipynb
+++ b/Tutorial-GRHD_Equations-Cartesian-c-code.ipynb
@@ -924,11 +924,8 @@
     }
    ],
    "source": [
-    "!jupyter nbconvert --to latex --template latex_nrpy_style.tplx --log-level='WARN' Tutorial-GRHD_Equations-Cartesian-c-code.ipynb\n",
-    "!pdflatex -interaction=batchmode Tutorial-GRHD_Equations-Cartesian-c-code.tex\n",
-    "!pdflatex -interaction=batchmode Tutorial-GRHD_Equations-Cartesian-c-code.tex\n",
-    "!pdflatex -interaction=batchmode Tutorial-GRHD_Equations-Cartesian-c-code.tex\n",
-    "!rm -f Tut*.out Tut*.aux Tut*.log"
+    "import cmdline_helper as cmd    # NRPy+: Multi-platform Python command-line interface\n",
+    "cmd.output_Jupyter_notebook_to_LaTeXed_PDF(\"Tutorial-GRHD_Equations-Cartesian-c-code\")"
    ]
   }
  ],
