--- a/Tutorial-Indexed_Expressions.ipynb
+++ b/Tutorial-Indexed_Expressions.ipynb
@@ -469,17 +469,14 @@
     }
    ],
    "source": [
-    "!jupyter nbconvert --to latex --template latex_nrpy_style.tplx --log-level='WARN' Tutorial-Indexed_Expressions.ipynb\n",
-    "!pdflatex -interaction=batchmode Tutorial-Indexed_Expressions.tex\n",
-    "!pdflatex -interaction=batchmode Tutorial-Indexed_Expressions.tex\n",
-    "!pdflatex -interaction=batchmode Tutorial-Indexed_Expressions.tex\n",
-    "!rm -f Tut*.out Tut*.aux Tut*.log"
+    "import cmdline_helper as cmd    # NRPy+: Multi-platform Python command-line interface\n",
+    "cmd.output_Jupyter_notebook_to_LaTeXed_PDF(\"Tutorial-Indexed_Expressions\")"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
