--- a/Tutorial-RK_Butcher_Table_Validation.ipynb
+++ b/Tutorial-RK_Butcher_Table_Validation.ipynb
@@ -524,11 +524,8 @@
     }
    ],
    "source": [
-    "!jupyter nbconvert --to latex --template latex_nrpy_style.tplx --log-level='WARN' Tutorial-RK_Butcher_Table_Validation.ipynb\n",
-    "!pdflatex -interaction=batchmode Tutorial-RK_Butcher_Table_Validation.tex\n",
-    "!pdflatex -interaction=batchmode Tutorial-RK_Butcher_Table_Validation.tex\n",
-    "!pdflatex -interaction=batchmode Tutorial-RK_Butcher_Table_Validation.tex\n",
-    "!rm -f Tut*.out Tut*.aux Tut*.log"
+    "import cmdline_helper as cmd    # NRPy+: Multi-platform Python command-line interface\n",
+    "cmd.output_Jupyter_notebook_to_LaTeXed_PDF(\"Tutorial-RK_Butcher_Table_Validation\")"
    ]
   }
  ],
