--- a/Tutorial-Reference_Metric.ipynb
+++ b/Tutorial-Reference_Metric.ipynb
@@ -1609,11 +1609,8 @@
     }
    ],
    "source": [
-    "!jupyter nbconvert --to latex --template latex_nrpy_style.tplx --log-level='WARN' Tutorial-Reference_Metric.ipynb\n",
-    "!pdflatex -interaction=batchmode Tutorial-Reference_Metric.tex\n",
-    "!pdflatex -interaction=batchmode Tutorial-Reference_Metric.tex\n",
-    "!pdflatex -interaction=batchmode Tutorial-Reference_Metric.tex\n",
-    "!rm -f Tut*.out Tut*.aux Tut*.log"
+    "import cmdline_helper as cmd    # NRPy+: Multi-platform Python command-line interface\n",
+    "cmd.output_Jupyter_notebook_to_LaTeXed_PDF(\"Tutorial-Reference_Metric\")"
    ]
   }
  ],
