--- a/Tutorial-Start_to_Finish-BSSNCurvilinear-Two_BHs_Collide-Psi4.ipynb
+++ b/Tutorial-Start_to_Finish-BSSNCurvilinear-Two_BHs_Collide-Psi4.ipynb
@@ -329,7 +329,7 @@
      "output_type": "stream",
      "text": [
       "Generating symbolic expressions for BSSN RHSs...\n",
-      "Finished BSSN symbolic expressions in 4.5283002853393555 seconds.\n"
+      "Finished BSSN symbolic expressions in 4.634588003158569 seconds.\n"
      ]
     }
    ],
@@ -561,7 +561,7 @@
      "output_type": "stream",
      "text": [
       "Generating symbolic expressions for psi4...\n",
-      "Finished psi4 symbolic expressions in 18.765198707580566 seconds.\n",
+      "Finished psi4 symbolic expressions in 21.272913217544556 seconds.\n",
       "Output C function psi4() to file BSSN_Two_BHs_Collide_Ccodes/psi4.h\n"
      ]
     }
@@ -666,32 +666,32 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Generating C code for psi4_re_pt0 in SinhSpherical coordinates.\n",
+      "Generating C code for psi4_re_pt2 in SinhSpherical coordinates.\n",
       "Generating C code for psi4_im_pt0 in SinhSpherical coordinates.\n",
       "Generating C code for psi4_re_pt1 in SinhSpherical coordinates.\n",
-      "Generating C code for psi4_im_pt2 in SinhSpherical coordinates.\n",
-      "Generating C code for psi4_re_pt0 in SinhSpherical coordinates.\n",
-      "Generating C code for psi4_im_pt1 in SinhSpherical coordinates.\n",
-      "Generating C code for psi4_re_pt2 in SinhSpherical coordinates.\n",
       "Generating optimized C code for Brill-Lindquist initial data. May take a while, depending on CoordSystem.\n",
+      "Generating C code for psi4_im_pt2 in SinhSpherical coordinates.\n",
+      "Generating C code for psi4_im_pt1 in SinhSpherical coordinates.\n",
       "Generating C code for BSSN RHSs in SinhSpherical coordinates.\n",
-      "Finished generating psi4_im_pt1 in 26.330562829971313 seconds.\n",
+      "Finished generating psi4_im_pt1 in 28.353578090667725 seconds.\n",
       "Generating C code for Ricci tensor in SinhSpherical coordinates.\n",
-      "Finished generating psi4_im_pt2 in 34.0760293006897 seconds.\n",
+      "Finished generating psi4_im_pt2 in 38.7402720451355 seconds.\n",
       "Generating optimized C code for Hamiltonian constraint. May take a while, depending on CoordSystem.\n",
       "Output C function rhs_eval() to file BSSN_Two_BHs_Collide_Ccodes/rhs_eval.h\n",
-      "Finished BSSN_RHS C codegen in 36.216957569122314 seconds.\n",
+      "Finished BSSN_RHS C codegen in 42.58788990974426 seconds.\n",
       "Generating optimized C code for gamma constraint. May take a while, depending on CoordSystem.\n",
       "Output C function enforce_detgammabar_constraint() to file BSSN_Two_BHs_Collide_Ccodes/enforce_detgammabar_constraint.h\n",
-      "Finished gamma constraint C codegen in 0.19873476028442383 seconds.\n",
-      "Finished BL initial data codegen in 37.40815711021423 seconds.\n",
-      "Finished generating psi4_re_pt2 in 42.03074598312378 seconds.\n",
-      "Finished generating psi4_re_pt1 in 45.19835662841797 seconds.\n",
+      "Finished gamma constraint C codegen in 0.21303391456604004 seconds.\n",
+      "Finished BL initial data codegen in 42.90003824234009 seconds.\n",
+      "Finished generating psi4_re_pt2 in 50.053873777389526 seconds.\n",
+      "Finished generating psi4_re_pt1 in 52.46151542663574 seconds.\n",
       "Output C function Ricci_eval() to file BSSN_Two_BHs_Collide_Ccodes/Ricci_eval.h\n",
-      "Finished Ricci C codegen in 28.569254636764526 seconds.\n",
-      "Finished generating psi4_im_pt0 in 64.52703619003296 seconds.\n",
+      "Finished Ricci C codegen in 37.14676308631897 seconds.\n",
+      "Finished generating psi4_im_pt0 in 75.79414463043213 seconds.\n",
       "Output C function Hamiltonian_constraint() to file BSSN_Two_BHs_Collide_Ccodes/Hamiltonian_constraint.h\n",
-      "Finished Hamiltonian C codegen in 45.48247790336609 seconds.\n",
-      "Finished generating psi4_re_pt0 in 92.77304410934448 seconds.\n"
+      "Finished Hamiltonian C codegen in 61.030043601989746 seconds.\n",
+      "Finished generating psi4_re_pt0 in 111.09268569946289 seconds.\n"
      ]
     }
    ],
@@ -1237,17 +1237,17 @@
       "\n",
       "Compiling executable...\n",
       "Executing `gcc -Ofast -fopenmp -march=native -funroll-loops BSSN_Two_BHs_Collide_Ccodes/BrillLindquist_Playground.c -o BrillLindquist_Playground -lm`...\n",
-      "Finished executing in 12.63501262664795 seconds.\n",
+      "Finished executing in 14.435639142990112 seconds.\n",
       "Finished compilation.\n",
-      "Finished in 12.64557933807373 seconds.\n",
+      "Finished in 14.446272611618042 seconds.\n",
       "\n",
       "\n",
       "Now running. Should take ~30 minutes...\n",
       "\n",
       "Executing `taskset -c 0,1,2,3 ./BrillLindquist_Playground 270 8 2 1.0`...\n",
-      "\u001b[2KIt: 27200 t=199.93 dt=7.35e-03 | 100.0%; ETA 0 s | t/h 1043.18 | gp/s 6.81e+05\n",
-      "Finished executing in 690.3608317375183 seconds.\n",
-      "Finished in 690.3758175373077 seconds.\n",
+      "\u001b[2KIt: 27200 t=199.93 dt=7.35e-03 | 100.0%; ETA 0 s | t/h 959.30 | gp/s 6.26e+05\n",
+      "Finished executing in 750.621664762497 seconds.\n",
+      "Finished in 750.6405498981476 seconds.\n",
       "\n",
       "\n"
      ]
@@ -1423,24 +1423,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
-      " restricted \\write18 enabled.\n",
-      "entering extended mode\n",
-      "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
-      " restricted \\write18 enabled.\n",
-      "entering extended mode\n",
-      "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
-      " restricted \\write18 enabled.\n",
-      "entering extended mode\n"
+      "Created Tutorial-Start_to_Finish-BSSNCurvilinear-Two_BHs_Collide-Psi4.tex, and compiled LaTeX file to PDF file Tutorial-Start_to_Finish-BSSNCurvilinear-Two_BHs_Collide-Psi4.pdf\n"
      ]
     }
    ],
    "source": [
-    "!jupyter nbconvert --to latex --template latex_nrpy_style.tplx --log-level='WARN' Tutorial-Start_to_Finish-BSSNCurvilinear-Two_BHs_Collide-Psi4.ipynb\n",
-    "!pdflatex -interaction=batchmode Tutorial-Start_to_Finish-BSSNCurvilinear-Two_BHs_Collide-Psi4.tex\n",
-    "!pdflatex -interaction=batchmode Tutorial-Start_to_Finish-BSSNCurvilinear-Two_BHs_Collide-Psi4.tex\n",
-    "!pdflatex -interaction=batchmode Tutorial-Start_to_Finish-BSSNCurvilinear-Two_BHs_Collide-Psi4.tex\n",
-    "!rm -f Tut*.out Tut*.aux Tut*.log"
+    "import cmdline_helper as cmd    # NRPy+: Multi-platform Python command-line interface\n",
+    "cmd.output_Jupyter_notebook_to_LaTeXed_PDF(\"Tutorial-Start_to_Finish-BSSNCurvilinear-Two_BHs_Collide-Psi4\")"
    ]
   }
  ],
