--- a/Tutorial-Start_to_Finish-Finite_Difference_Playground.ipynb
+++ b/Tutorial-Start_to_Finish-Finite_Difference_Playground.ipynb
@@ -267,10 +267,10 @@
      "text": [
       "Compiling executable...\n",
       "Executing `gcc -Ofast -fopenmp -march=native -funroll-loops finite_difference_playground.c -o fdp -lm`...\n",
-      "Finished executing in 0.21062183380126953 seconds.\n",
+      "Finished executing in 0.21036362648010254 seconds.\n",
       "Finished compilation.\n",
       "Executing `taskset -c 0,1,2,3 ./fdp `...\n",
-      "Finished executing in 0.2078721523284912 seconds.\n"
+      "Finished executing in 0.21497416496276855 seconds.\n"
      ]
     }
    ],
@@ -376,24 +376,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
-      " restricted \\write18 enabled.\n",
-      "entering extended mode\n",
-      "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
-      " restricted \\write18 enabled.\n",
-      "entering extended mode\n",
-      "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
-      " restricted \\write18 enabled.\n",
-      "entering extended mode\n"
+      "Created Tutorial-Start_to_Finish-Finite_Difference_Playground.tex, and compiled LaTeX file to PDF file Tutorial-Start_to_Finish-Finite_Difference_Playground.pdf\n"
      ]
     }
    ],
    "source": [
-    "!jupyter nbconvert --to latex --template latex_nrpy_style.tplx --log-level='WARN' Tutorial-Start_to_Finish-Finite_Difference_Playground.ipynb\n",
-    "!pdflatex -interaction=batchmode Tutorial-Start_to_Finish-Finite_Difference_Playground.tex\n",
-    "!pdflatex -interaction=batchmode Tutorial-Start_to_Finish-Finite_Difference_Playground.tex\n",
-    "!pdflatex -interaction=batchmode Tutorial-Start_to_Finish-Finite_Difference_Playground.tex\n",
-    "!rm -f Tut*.out Tut*.aux Tut*.log"
+    "import cmdline_helper as cmd    # NRPy+: Multi-platform Python command-line interface\n",
+    "cmd.output_Jupyter_notebook_to_LaTeXed_PDF(\"Tutorial-Start_to_Finish-Finite_Difference_Playground\")"
    ]
   }
  ],
