--- a/Tutorial-Coutput__Parameter_Interface.ipynb
+++ b/Tutorial-Coutput__Parameter_Interface.ipynb
@@ -570,16 +570,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[pandoc warning] Duplicate link reference `[comment]' \"source\" (line 26, column 1)\r\n",
-      "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\r\n",
-      " restricted \\write18 enabled.\r\n",
-      "entering extended mode\r\n",
-      "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\r\n",
-      " restricted \\write18 enabled.\r\n",
-      "entering extended mode\r\n",
-      "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\r\n",
-      " restricted \\write18 enabled.\r\n",
-      "entering extended mode\r\n"
+      "[pandoc warning] Duplicate link reference `[comment]' \"source\" (line 26, column 1)\n",
+      "Created Tutorial-Coutput__Parameter_Interface.tex, and compiled LaTeX file to PDF file Tutorial-Coutput__Parameter_Interface.pdf\n"
      ]
     }
    ],
