--- a/Tutorial-Indexed_Expressions.ipynb
+++ b/Tutorial-Indexed_Expressions.ipynb
@@ -456,15 +456,7 @@
      "output_type": "stream",
      "text": [
       "[pandoc warning] Duplicate link reference `[comment]' \"source\" (line 19, column 1)\n",
-      "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
-      " restricted \\write18 enabled.\n",
-      "entering extended mode\n",
-      "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
-      " restricted \\write18 enabled.\n",
-      "entering extended mode\n",
-      "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
-      " restricted \\write18 enabled.\n",
-      "entering extended mode\n"
+      "Created Tutorial-Indexed_Expressions.tex, and compiled LaTeX file to PDF file Tutorial-Indexed_Expressions.pdf\n"
      ]
     }
    ],
