--- a/Tutorial-Method_of_Lines-C_Code_Generation.ipynb
+++ b/Tutorial-Method_of_Lines-C_Code_Generation.ipynb
@@ -681,15 +681,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
-      " restricted \\write18 enabled.\n",
-      "entering extended mode\n",
-      "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
-      " restricted \\write18 enabled.\n",
-      "entering extended mode\n",
-      "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
-      " restricted \\write18 enabled.\n",
-      "entering extended mode\n"
+      "Created Tutorial-Method_of_Lines-C_Code_Generation.tex, and compiled LaTeX file to PDF file Tutorial-Method_of_Lines-C_Code_Generation.pdf\n"
      ]
     }
    ],
