--- a/Tutorial-RK_Butcher_Table_Dictionary.ipynb
+++ b/Tutorial-RK_Butcher_Table_Dictionary.ipynb
@@ -896,15 +896,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
-      " restricted \\write18 enabled.\n",
-      "entering extended mode\n",
-      "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
-      " restricted \\write18 enabled.\n",
-      "entering extended mode\n",
-      "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
-      " restricted \\write18 enabled.\n",
-      "entering extended mode\n"
+      "Created Tutorial-RK_Butcher_Table_Dictionary.tex, and compiled LaTeX file to PDF file Tutorial-RK_Butcher_Table_Dictionary.pdf\n"
      ]
     }
    ],
