--- a/Tutorial-SEOBNR_Documentation.ipynb
+++ b/Tutorial-SEOBNR_Documentation.ipynb
@@ -4464,32 +4464,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
-      " restricted \\write18 enabled.\n",
-      "entering extended mode\n",
-      "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
-      " restricted \\write18 enabled.\n",
-      "entering extended mode\n",
-      "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
-      " restricted \\write18 enabled.\n",
-      "entering extended mode\n"
+      "Created Tutorial-SEOBNR_Documentation.tex, and compiled LaTeX file to PDF file Tutorial-SEOBNR_Documentation.pdf\n"
      ]
     }
    ],
    "source": [
-    "!jupyter nbconvert --to latex --template latex_nrpy_style.tplx --log-level='WARN' Tutorial-SEOBNR_Documentation.ipynb\n",
-    "!pdflatex -interaction=batchmode Tutorial-SEOBNR_Documentation.tex\n",
-    "!pdflatex -interaction=batchmode Tutorial-SEOBNR_Documentation.tex\n",
-    "!pdflatex -interaction=batchmode Tutorial-SEOBNR_Documentation.tex\n",
-    "!rm -f Tut*.out Tut*.aux Tut*.log"
+    "import cmdline_helper as cmd    # NRPy+: Multi-platform Python command-line interface\n",
+    "cmd.output_Jupyter_notebook_to_LaTeXed_PDF(\"Tutorial-SEOBNR_Documentation\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
