--- a/Tutorial-ScalarWaveCurvilinear.ipynb
+++ b/Tutorial-ScalarWaveCurvilinear.ipynb
@@ -510,30 +510,19 @@
      "output_type": "stream",
      "text": [
       "[pandoc warning] Duplicate link reference `[comment]' \"source\" (line 23, column 1)\n",
-      "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
-      " restricted \\write18 enabled.\n",
-      "entering extended mode\n",
-      "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
-      " restricted \\write18 enabled.\n",
-      "entering extended mode\n",
-      "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
-      " restricted \\write18 enabled.\n",
-      "entering extended mode\n"
+      "Created Tutorial-ScalarWaveCurvilinear.tex, and compiled LaTeX file to PDF file Tutorial-ScalarWaveCurvilinear.pdf\n"
      ]
     }
    ],
    "source": [
-    "!jupyter nbconvert --to latex --template latex_nrpy_style.tplx --log-level='WARN' Tutorial-ScalarWaveCurvilinear.ipynb\n",
-    "!pdflatex -interaction=batchmode Tutorial-ScalarWaveCurvilinear.tex\n",
-    "!pdflatex -interaction=batchmode Tutorial-ScalarWaveCurvilinear.tex\n",
-    "!pdflatex -interaction=batchmode Tutorial-ScalarWaveCurvilinear.tex\n",
-    "!rm -f Tut*.out Tut*.aux Tut*.log"
+    "import cmdline_helper as cmd    # NRPy+: Multi-platform Python command-line interface\n",
+    "cmd.output_Jupyter_notebook_to_LaTeXed_PDF(\"Tutorial-ScalarWaveCurvilinear\")"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
