--- a/Tutorial-Start_to_Finish-Curvilinear_BCs.ipynb
+++ b/Tutorial-Start_to_Finish-Curvilinear_BCs.ipynb
@@ -1604,10 +1604,10 @@
      "text": [
       "Compiling executable...\n",
       "Executing `gcc -O2 -g -fopenmp CurviBoundaryConditions_Ccodes/CurviBC_Playground.c -o CurviBC_Playground -lm`...\n",
-      "Finished executing in 0.4107182025909424 seconds.\n",
+      "Finished executing in 0.4102339744567871 seconds.\n",
       "Finished compilation.\n",
       "Executing `taskset -c 0,1,2,3 ./CurviBC_Playground 4 4 4 Discrete`...\n",
-      "Finished executing in 0.21119141578674316 seconds.\n",
+      "Finished executing in 0.2117781639099121 seconds.\n",
       "Finished this code cell.\n"
      ]
     }
@@ -1656,19 +1656,19 @@
       "Running discrete CurviBC_Playground test on Spherical data, using NRPy+ CurviBoundaryConditions.CurviBoundaryConditions module.\n",
       "Compiling executable...\n",
       "Executing `gcc -Ofast -fopenmp -march=native -funroll-loops CurviBoundaryConditions_Ccodes/CurviBC_Playground.c -o CurviBC_Playground -lm`...\n",
-      "Finished executing in 1.0139169692993164 seconds.\n",
+      "Finished executing in 1.013765573501587 seconds.\n",
       "Finished compilation.\n",
       "Executing `taskset -c 0,1,2,3 ./CurviBC_Playground 4 4 4 Discrete`...\n",
-      "Finished executing in 0.21042752265930176 seconds.\n",
+      "Finished executing in 0.21175551414489746 seconds.\n",
       "Wrote to file \"CurviBoundaryConditions_Ccodes/boundary_conditions/parity_conditions_symbolic_dot_products.h\"\n",
       "Wrote to file \"CurviBoundaryConditions_Ccodes/boundary_conditions/EigenCoord_Cart_to_xx.h\"\n",
       "Running discrete CurviBC_Playground test on Cylindrical data, using NRPy+ CurviBoundaryConditions.CurviBoundaryConditions module.\n",
       "Compiling executable...\n",
       "Executing `gcc -Ofast -fopenmp -march=native -funroll-loops CurviBoundaryConditions_Ccodes/CurviBC_Playground.c -o CurviBC_Playground -lm`...\n",
-      "Finished executing in 1.008359670639038 seconds.\n",
+      "Finished executing in 1.015016794204712 seconds.\n",
       "Finished compilation.\n",
       "Executing `taskset -c 0,1,2,3 ./CurviBC_Playground 4 4 4 Discrete`...\n",
-      "Finished executing in 0.20819401741027832 seconds.\n",
+      "Finished executing in 0.21350860595703125 seconds.\n",
       "Finished this code cell.\n",
       "\n",
       "\n",
@@ -1744,24 +1744,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
-      " restricted \\write18 enabled.\n",
-      "entering extended mode\n",
-      "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
-      " restricted \\write18 enabled.\n",
-      "entering extended mode\n",
-      "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
-      " restricted \\write18 enabled.\n",
-      "entering extended mode\n"
+      "Created Tutorial-Start_to_Finish-Curvilinear_BCs.tex, and compiled LaTeX file to PDF file Tutorial-Start_to_Finish-Curvilinear_BCs.pdf\n"
      ]
     }
    ],
    "source": [
-    "!jupyter nbconvert --to latex --template latex_nrpy_style.tplx --log-level='WARN' Tutorial-Start_to_Finish-Curvilinear_BCs.ipynb\n",
-    "!pdflatex -interaction=batchmode Tutorial-Start_to_Finish-Curvilinear_BCs.tex\n",
-    "!pdflatex -interaction=batchmode Tutorial-Start_to_Finish-Curvilinear_BCs.tex\n",
-    "!pdflatex -interaction=batchmode Tutorial-Start_to_Finish-Curvilinear_BCs.tex\n",
-    "!rm -f Tut*.out Tut*.aux Tut*.log"
+    "import cmdline_helper as cmd    # NRPy+: Multi-platform Python command-line interface\n",
+    "cmd.output_Jupyter_notebook_to_LaTeXed_PDF(\"Tutorial-Start_to_Finish-Curvilinear_BCs\")"
    ]
   }
  ],
