--- a/Tutorial-Start_to_Finish-ScalarWaveCurvilinear.ipynb
+++ b/Tutorial-Start_to_Finish-ScalarWaveCurvilinear.ipynb
@@ -674,14 +674,14 @@
      "text": [
       "Compiling executable...\n",
       "Executing `gcc -Ofast -fopenmp -march=native -funroll-loops ScalarWaveCurvilinear_Playground_Ccodes/ScalarWaveCurvilinear_Playground.c -o ScalarWaveCurvilinear_Playground_Ccodes/output/ScalarWaveCurvilinear_Playground -lm`...\n",
-      "Finished executing in 1.2110958099365234 seconds.\n",
+      "Finished executing in 1.2138879299163818 seconds.\n",
       "Finished compilation.\n",
       "Executing `taskset -c 0,1,2,3 ./ScalarWaveCurvilinear_Playground 16  8 16`...\n",
-      "Finished executing in 0.20906901359558105 seconds.\n",
+      "Finished executing in 0.21125030517578125 seconds.\n",
       "Executing `taskset -c 0,1,2,3 ./ScalarWaveCurvilinear_Playground 24 12 24`...\n",
-      "Finished executing in 0.6097874641418457 seconds.\n",
+      "Finished executing in 0.6100401878356934 seconds.\n",
       "Executing `taskset -c 0,1,2,3 ./ScalarWaveCurvilinear_Playground 48 24 48`...\n",
-      "Finished executing in 17.640653133392334 seconds.\n"
+      "Finished executing in 17.43790626525879 seconds.\n"
      ]
     }
    ],
@@ -843,24 +843,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
-      " restricted \\write18 enabled.\n",
-      "entering extended mode\n",
-      "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
-      " restricted \\write18 enabled.\n",
-      "entering extended mode\n",
-      "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
-      " restricted \\write18 enabled.\n",
-      "entering extended mode\n"
+      "Created Tutorial-Start_to_Finish-ScalarWaveCurvilinear.tex, and compiled LaTeX file to PDF file Tutorial-Start_to_Finish-ScalarWaveCurvilinear.pdf\n"
      ]
     }
    ],
    "source": [
-    "!jupyter nbconvert --to latex --template latex_nrpy_style.tplx --log-level='WARN' Tutorial-Start_to_Finish-ScalarWaveCurvilinear.ipynb\n",
-    "!pdflatex -interaction=batchmode Tutorial-Start_to_Finish-ScalarWaveCurvilinear.tex\n",
-    "!pdflatex -interaction=batchmode Tutorial-Start_to_Finish-ScalarWaveCurvilinear.tex\n",
-    "!pdflatex -interaction=batchmode Tutorial-Start_to_Finish-ScalarWaveCurvilinear.tex\n",
-    "!rm -f Tut*.out Tut*.aux Tut*.log"
+    "import cmdline_helper as cmd    # NRPy+: Multi-platform Python command-line interface\n",
+    "cmd.output_Jupyter_notebook_to_LaTeXed_PDF(\"Tutorial-Start_to_Finish-ScalarWaveCurvilinear\")"
    ]
   }
  ],
