--- a/Tutorial-cmdline_helper.ipynb
+++ b/Tutorial-cmdline_helper.ipynb
@@ -71,7 +71,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Overwriting cmdline_helper-validation.py\n"
+      "Writing cmdline_helper-validation.py\n"
      ]
     }
    ],
