--- a/Tutorial-u0_smallb_Poynting-Cartesian.ipynb
+++ b/Tutorial-u0_smallb_Poynting-Cartesian.ipynb
@@ -577,24 +577,13 @@
      "output_type": "stream",
      "text": [
       "[pandoc warning] Duplicate link reference `[comment]' \"source\" (line 22, column 1)\n",
-      "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
-      " restricted \\write18 enabled.\n",
-      "entering extended mode\n",
-      "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
-      " restricted \\write18 enabled.\n",
-      "entering extended mode\n",
-      "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
-      " restricted \\write18 enabled.\n",
-      "entering extended mode\n"
+      "Created Tutorial-u0_smallb_Poynting-Cartesian.tex, and compiled LaTeX file to PDF file Tutorial-u0_smallb_Poynting-Cartesian.pdf\n"
      ]
     }
    ],
    "source": [
-    "!jupyter nbconvert --to latex --template latex_nrpy_style.tplx --log-level='WARN' Tutorial-u0_smallb_Poynting-Cartesian.ipynb\n",
-    "!pdflatex -interaction=batchmode Tutorial-u0_smallb_Poynting-Cartesian.tex\n",
-    "!pdflatex -interaction=batchmode Tutorial-u0_smallb_Poynting-Cartesian.tex\n",
-    "!pdflatex -interaction=batchmode Tutorial-u0_smallb_Poynting-Cartesian.tex\n",
-    "!rm -f Tut*.out Tut*.aux Tut*.log"
+    "import cmdline_helper as cmd    # NRPy+: Multi-platform Python command-line interface\n",
+    "cmd.output_Jupyter_notebook_to_LaTeXed_PDF(\"Tutorial-u0_smallb_Poynting-Cartesian\")"
    ]
   }
  ],
